--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <link href="jk-test.css" rel="stylesheet">
+  </head>
+  <body>
+    <p>Test</p>
+  </body>
 </html>
